# secure-exec

./: .gitattributes  .gitignore  CLAUDE.md  FUTURE_WORK.md  NODE_COMPAT_RESEARCH.md  NPM_COMPAT_SPEC.md  NPM_COMPAT_SPEC_2.md  README.md  ROADMAP.md  SPEC.md  SPEC_3.md  TEST_SUITE_SPEC.md  TEST_WASM_JS_BRIDGE.md  biome.json  goals.md  justfile  libc-test-conformance-report.json  npm_compat_spec_3.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  posix-conformance-report.json  prd.json  progress.txt  security.md  turbo.json
.agent/contracts/: compatibility-governance.md  documentation-site.md  kernel.md  node-bridge.md  node-runtime.md  node-stdlib.md  runtime-driver-test-suite-structure.md
.claude/skills/git-sync/: SKILL.md
.github/workflows/: ci.yml  conformance.yml  libc-test-conformance.yml  os-test-conformance.yml  release.yml  rust.yml
crates/secure-exec-ipc/: Cargo.toml
crates/secure-exec-ipc/src/: lib.rs
crates/secure-exec-rs/: Cargo.toml
crates/secure-exec-rs/bridge/: bridge.js
crates/secure-exec-rs/src/: bridge.rs  command.rs  driver.rs  error.rs  fs.rs  ipc.rs  lib.rs  network.rs  permissions.rs  runtime.rs  system.rs  v8_runtime.rs
crates/secure-exec-rs/tests/: integration.rs
crates/v8-runtime/: Cargo.toml
crates/v8-runtime/docker/: Dockerfile.linux-x64-gnu
crates/v8-runtime/npm/darwin-arm64/: README.md  install.js  package.json
crates/v8-runtime/npm/darwin-x64/: README.md  install.js  package.json
crates/v8-runtime/npm/linux-arm64-gnu/: README.md  install.js  package.json
crates/v8-runtime/npm/linux-x64-gnu/: package.json
crates/v8-runtime/npm/win32-x64/: README.md  install.js  package.json
crates/v8-runtime/src/: bridge.rs  execution.rs  host_call.rs  ipc.rs  ipc_binary.rs  main.rs  session.rs  snapshot.rs  stream.rs  timeout.rs
docs/: CHILD_PROCESS_IPC.md  api-reference.mdx  architecture.mdx  cloudflare-workers-comparison.mdx  conformance-report.mdx  cost-evaluation.mdx  docs.json  libc-test-conformance-report.mdx  nodejs-compatibility.mdx  nodejs-conformance-report.mdx  os-test-conformance-report.mdx  posix-compatibility.md  process-isolation.mdx  python-compatibility.mdx  quickstart.mdx  sandbox-vs-secure-exec.mdx  sdk-overview.mdx  security-model.mdx
docs-internal/: attack-vectors.md  friction.md  glossary.md  node-wasm-stdlib-exploration.md  nodejs-compat-roadmap.md  posix-gaps-audit.md  review-notes.md  spec-hardening.md  todo.md
docs-internal/arch/: active-handles.md  glibc-portability.md  kernel-integration.md  overview.md
docs-internal/friction/: sandboxed-node.md  secure-exec.md
docs-internal/node/: STDLIB_COMPATIBILITY.md
docs-internal/research/comparison/: browser-node-runtimes.md  bun-wasm-binding-feasibility.md  cloudflare-workers-isolates.md  edgejs-binding-architecture.md  isolation-mechanisms.md  managed-sandbox-services.md  node-vs-bun-ipc-boundary.md  shell-emulators.md
docs-internal/specs/: cli-tool-e2e.md  nodejs-conformance-tests.md  nodejs-test-suite.md  package-split.md  posix-hardening.md  upstream-node-runtime-plan.md  upstream-node-runtime-preflight.md  upstream-node-runtime-wasmvm-probes.md  v8-ipc-serialization.md  v8-migration.md  v8-runtime.md
docs/bugs/: child-process-hang.md  wasix-bash-builtin-exit-codes.md
docs/features/: child-processes.mdx  custom-bindings.mdx  filesystem.mdx  module-loading.mdx  networking.mdx  output-capture.mdx  permissions.mdx  resource-limits.mdx  typescript.mdx
docs/kernel/: interactive-shell.mdx  quickstart.mdx
docs/research/: wasmer-js-stdin-stdout.md
docs/runtimes/: node.mdx  overview.mdx  python.mdx
docs/specs/: WASMER_PATH_RESOLUTION_FIX.md
docs/system-drivers/: browser.mdx  node.mdx  overview.mdx
docs/use-cases/: dev-servers.mdx
docs/wasmvm/: supported-commands.md
ecosystem-tests/: package.json
ecosystem-tests/src/: npm.test.ts
ecosystem-tests/tests/: claude-code.test.ts  gh.test.ts  npm.test.ts  pnpm.test.ts  tsc.test.ts  yarn.test.ts
examples/ai-agent-type-check/: package.json
examples/ai-agent-type-check/scripts/: verify-docs.mjs
examples/ai-sdk/: package.json
examples/code-mode/: package.json
examples/code-mode/scripts/: verify-docs.mjs
examples/codemod/: package.json
examples/features/: package.json
examples/hono/: README.md
examples/hono-dev-server/: package.json
examples/just-bash/: package.json
examples/plugin-system/: package.json
examples/quickstart/: README.md  package.json  tsconfig.json
native/v8-runtime/: Cargo.toml
native/wasmvm/: CLAUDE.md
scratch/wasmer-test/: test12-wasix-custom-module.ts
scripts/: calculate-costs.js  conformance-exclusion-schema.ts  generate-libc-test-report.ts  generate-node-conformance-report.ts  generate-os-test-report.ts  import-libc-test.ts  release.ts  shell.ts  sync-node-upstream-assets.ts  validate-libc-test-exclusions.ts  validate-os-test-exclusions.ts
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt  ralph.sh
src/node-process/: index.test.ts  index.ts  polyfills.ts
src/vm/: host-loader.ts  index.test.ts  index.ts
wasmvm/: CLAUDE.md  Cargo.toml  Makefile
wasmvm/c/: .gitignore  Makefile
wasmvm/c/libs/curl/lib/: curl_config.h  curl_setup_once.h  hostip.c  wasi_compat.h  wasi_stubs.c
wasmvm/c/libs/curl/lib/vtls/: wasi_tls.c
wasmvm/c/libs/git/: LICENSE  git-index.c  git-index.h  git-objects.c  git-objects.h  sha1.c  sha1.h
wasmvm/c/libs/minizip/: ioapi.c  ioapi.h
wasmvm/c/libs/sqlite3/: LICENSE
wasmvm/c/programs/: curl_cli.c  getpid_test.c  getppid_verify.c  git.c  kill_child.c  make.c  pipeline.c  signal_tests.c  spawn_child.c  spawn_exit_code.c  syscall_coverage.c  waitpid_return.c
wasmvm/crates/commands/codex/: Cargo.toml
wasmvm/crates/commands/codex/src/: main.rs
wasmvm/crates/multicall/: Cargo.toml
wasmvm/crates/wasi-ext/src/: lib.rs
wasmvm/notes/specs/: wasmvm-c-toolchain.md  wasmvm-tool-completeness.md
wasmvm/patches/wasi-libc/: 0001-pipe-dup.patch  0002-spawn-wait.patch  0003-kill.patch  0004-getpid.patch  0005-user-identity.patch  0008-sockets.patch
wasmvm/scripts/: patch-wasi-libc.sh
(+111 files in other folders)
