[workspace]
resolver = "2"
members = [
    "crates/wasi-ext",
    "crates/multicall",
    "crates/shims",
    "crates/libs/grep",
    "crates/libs/awk",
    "crates/libs/jq",
    "crates/libs/yq",
    "crates/commands/grep",
    "crates/commands/sh",
    "crates/commands/sed",
    "crates/commands/awk",
    "crates/commands/jq",
    "crates/commands/yq",
    "crates/commands/rg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# WASM-compatible stubs for crates that don't support wasm32-wasip1
[patch.crates-io]
ctrlc = { path = "stubs/ctrlc" }
hostname = { path = "stubs/hostname" }
uucore = { path = "stubs/uucore" }
