[workspace]
resolver = "2"
members = [
    "crates/wasi-ext",
    "crates/multicall",
    "crates/shims",
    "crates/libs/grep",
    "crates/libs/awk",
    "crates/libs/jq",
    "crates/libs/yq",
    "crates/commands/grep",
    "crates/commands/sh",
    "crates/commands/sed",
    "crates/commands/awk",
    "crates/commands/jq",
    "crates/commands/yq",
    "crates/commands/rg",
    "crates/libs/find",
    "crates/libs/file-cmd",
    "crates/libs/tree",
    "crates/libs/du",
    "crates/libs/column",
    "crates/libs/rev",
    "crates/libs/strings-cmd",
    "crates/libs/expr",
    "crates/libs/diff",
    "crates/commands/find",
    "crates/commands/file",
    "crates/commands/tree",
    "crates/commands/du",
    "crates/commands/column",
    "crates/commands/rev",
    "crates/commands/strings",
    "crates/commands/expr",
    "crates/commands/diff",
    "crates/libs/gzip",
    "crates/libs/tar",
    "crates/commands/gzip",
    "crates/commands/tar",
    "crates/commands/ls",
    "crates/commands/cat",
    "crates/commands/cp",
    "crates/commands/mv",
    "crates/commands/rm",
    "crates/commands/mkdir",
    "crates/commands/chmod",
    "crates/commands/sort",
    "crates/commands/head",
    "crates/commands/tail",
    "crates/commands/wc",
    "crates/commands/cut",
    "crates/commands/tr",
    "crates/commands/echo",
    "crates/commands/printf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# WASM-compatible stubs for crates that don't support wasm32-wasip1
[patch.crates-io]
ctrlc = { path = "stubs/ctrlc" }
hostname = { path = "stubs/hostname" }
uucore = { path = "stubs/uucore" }
