[package]
name = "secure-exec-v8-runtime"
version = "0.1.0"
edition = "2021"
description = "V8 runtime process for secure-exec, communicating over Unix domain socket with length-prefixed MessagePack IPC"
publish = false

[[bin]]
name = "secure-exec-v8"
path = "src/main.rs"

[dependencies]
v8 = "130"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
crossbeam-channel = "0.5"
signal-hook = "0.3"
rmpv = "1"
libc = "0.2"
