[package]
name = "multicall"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BusyBox-style multicall binary for wasmVM"

[[bin]]
name = "multicall"
path = "src/main.rs"

[dependencies]
uucore = "0.7.0"
wasi-ext = { path = "../wasi-ext" }
shims = { package = "secureexec-shims", path = "../libs/shims" }

# --- Text processing / pure computation ---
uu_base32 = "0.7.0"
uu_base64 = "0.7.0"
uu_basenc = "0.7.0"
uu_basename = "0.7.0"
uu_comm = "0.7.0"
uu_cut = "0.7.0"
uu_dircolors = "0.7.0"
uu_dirname = "0.7.0"
uu_echo = "0.7.0"
uu_expand = "0.7.0"
uu_factor = "0.7.0"
uu_false = "0.7.0"
uu_fmt = "0.7.0"
uu_fold = "0.7.0"
uu_join = "0.7.0"
uu_nl = "0.7.0"
uu_numfmt = "0.7.0"
uu_od = "0.7.0"
uu_paste = "0.7.0"
uu_printenv = "0.7.0"
uu_printf = "0.7.0"
uu_ptx = "0.7.0"
uu_seq = "0.7.0"
uu_shuf = "0.7.0"
uu_tr = "0.7.0"
uu_true = "0.7.0"
uu_unexpand = "0.7.0"
uu_uniq = "0.7.0"
uu_wc = "0.7.0"
uu_yes = "0.7.0"

# --- Checksums ---
uu_b2sum = "0.7.0"
uu_cksum = "0.7.0"
uu_md5sum = "0.7.0"
uu_sha1sum = "0.7.0"
uu_sha224sum = "0.7.0"
uu_sha256sum = "0.7.0"
uu_sha384sum = "0.7.0"
uu_sha512sum = "0.7.0"
uu_sum = "0.7.0"

# --- File operations (need patched uucore mode/entries/perms features, US-007/US-009) ---
uu_chmod = "0.7.0"
uu_cp = "0.7.0"
uu_dd = "0.7.0"
uu_ln = "0.7.0"
uu_mkdir = "0.7.0"
uu_mktemp = "0.7.0"
uu_mv = "0.7.0"
uu_rm = "0.7.0"
uu_split = "0.7.0"
uu_stat = "0.7.0"
uu_tac = "0.7.0"
uu_touch = "0.7.0"

# --- File operations (need crate-level WASI patches, US-008) ---
uu_cat = "0.7.0"
uu_head = "0.7.0"
uu_tail = "0.7.0"
uu_sort = "0.7.0"
uu_ls = "0.7.0"

# --- File operations (basic WASI I/O) ---
uu_link = "0.7.0"
uu_pwd = "0.7.0"
uu_readlink = "0.7.0"
uu_realpath = "0.7.0"
uu_rmdir = "0.7.0"
uu_shred = "0.7.0"
uu_tee = "0.7.0"
uu_truncate = "0.7.0"
uu_unlink = "0.7.0"

# --- System info / misc ---
uu_arch = "0.7.0"
uu_date = "0.7.0"
uu_logname = "0.7.0"
uu_nproc = "0.7.0"
uu_pathchk = "0.7.0"
# uu_sleep not needed - builtin sleep used instead (busy-wait for WASI)
uu_tsort = "0.7.0"
uu_uname = "0.7.0"

# --- shell (brush-shell, bash 5.x compatible, MIT) ---
# Tier 1: compiles directly for wasm32-wasip1 with minimal features (no terminal/reedline)
brush-shell = { version = "0.3.0", default-features = false, features = ["minimal"] }

# --- sed (uutils/sed, GNU sed compatible, MIT) ---
sed = "0.1.1"

# --- grep/sed/awk (pure Rust regex engine) ---
regex = "1"

# --- awk (pure Rust POSIX awk) ---
awk-rs = "0.1.0"

# --- file type detection (magic bytes, MIT) ---
infer = "0.16"

# --- compression (gzip/gunzip/zcat, MIT/Apache-2.0) ---
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# --- tar archive (MIT/Apache-2.0) ---
tar = "0.4"

# --- diff (text comparison, MIT/Apache-2.0) ---
similar = "2"

# --- jq/yq (jaq, pure Rust jq implementation + format converters) ---
jaq-core = "2.2"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = "0.37"

# NOTE: Crates NOT included due to WASM/WASI incompatibilities:
#
# Resolved via vendor+patch (US-008): uu_cat, uu_tail — WASI patches
# Resolved via vendor+patch (US-010): uu_dd, uu_ln, uu_logname, uu_mktemp,
#   uu_pathchk, uu_tac, uu_touch, uu_tsort — WASI patches
# Resolved via patched uucore (US-007): uu_chmod, uu_cp, uu_mkdir, uu_stat
# Tier 1 (US-008/US-009/US-010): uu_head, uu_sort, uu_ls, uu_mv, uu_rm
#
# Remaining platform-specific (not yet ported):
#   uu_csplit (entries), uu_du (fsext), uu_df (fsext)
#   uu_install (mode+entries+perms), uu_split (platform fn)
#   uu_test (17 unix errors), uu_whoami (unix)
#
# Need native C libraries or OS features:
#   uu_expr (onig), uu_hostname (hostname crate), uu_hostid (libc)
#   uu_stty (ioctl), uu_tty (linux), uu_sync (unix)
#
# Need unix-only features:
#   uu_chcon, uu_runcon (SELinux), uu_chroot, uu_chgrp, uu_chown
#   uu_groups, uu_id (entries), uu_kill (signals)
#   uu_mkfifo, uu_mknod (libc), uu_more (terminal)
#   uu_pinky, uu_who, uu_users, uu_uptime (utmpx)
#   uu_dir, uu_vdir (complex fs), uu_pr (terminal)
#
# Subprocess commands (use shims instead):
#   uu_env, uu_timeout, uu_nice, uu_nohup, uu_stdbuf
